--- a/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWindow.uxml
+++ b/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWindow.uxml
@@ -1,9 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<engine:UXML
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:engine="UnityEngine.UIElements"
-    xmlns:editor="UnityEditor.UIElements"
-    xsi:noNamespaceSchemaLocation="../../../../../../UIElementsSchema/UIElements.xsd"
->
-    
+<engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <engine:VisualElement style="width: 100%; height: 100px; background-color: rgb(0, 0, 0);">
+        <engine:Label text="ポーズ状態" style="-unity-font-style: bold; color: rgb(255, 255, 255); font-size: 20%; -unity-text-align: middle-center; width: 100%; height: 40%;" />
+        <engine:VisualElement name="pause" style="width: 20%; height: 50%; align-self: center; background-color: rgb(3, 255, 0);" />
+    </engine:VisualElement>
 </engine:UXML>
