--- a/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWIndow.uss
+++ b/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWIndow.uss
@@ -7,3 +7,27 @@
     height: 50px;
     white-space: pre-wrap;
 }
+
+.base {
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    background-color: rgb(60, 60, 60);
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width: 100%;
+    align-items: center;
+}
+
+.text {
+    color: rgb(255, 255, 255);
+}
