--- a/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWIndow.uss
+++ b/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWIndow.uss
@@ -6,6 +6,14 @@
     width: 100%;
     height: 50px;
     white-space: pre-wrap;
+    margin-top: 3px;
+    margin-right: 0;
+    margin-bottom: 5px;
+    margin-left: 0;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
 }
 
 .base {
@@ -38,4 +46,48 @@
 .text {
     color: rgb(255, 255, 255);
     font-size: 15px;
+}
+
+.button {
+    background-color: rgb(56, 56, 56);
+    margin-top: 3px;
+    margin-right: 3px;
+    margin-bottom: 3px;
+    margin-left: 3px;
+    padding-top: 2px;
+    padding-right: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    width: 35%;
+    height: 100%;
+    transition-duration: 0.15s;
+    transition-timing-function: ease-out-sine;
+}
+
+.button:hover {
+    scale: 1.1 1.1;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-sine;
+}
+
+.button:active {
+    scale: 0.9 0.9;
+    background-color: rgb(60, 60, 60);
+    transition-duration: 0.05s;
+    transition-timing-function: ease-in-circ;
 }
