--- a/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWindow.uxml
+++ b/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWindow.uxml
@@ -1,15 +1,18 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWIndow.uss?fileID=7433441132597879392&amp;guid=16c3f611d15eda644b63e276b16e6925&amp;type=3#SymphonyWIndow" />
-    <engine:VisualElement class="base text" style="height: 200px;">
-        <engine:Label text="ポーズ状態" class="title" style="margin-top: 5px;" />
-        <engine:VisualElement name="pause" style="width: 60px; height: 60px; background-color: rgb(0, 255, 0); margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px; border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
-        <engine:VisualElement style="height: 35px; width: 70%; flex-direction: row; align-content: center; justify-content: space-around;">
-            <engine:Button text="Resume" name="button-resume" class="button" />
-            <engine:Button text="Pause" name="button-pause" class="button" />
+    <engine:ScrollView>
+        <engine:VisualElement class="base text" style="height: 200px;">
+            <engine:Label text="ポーズ状態" class="title" style="margin-top: 5px;" />
+            <engine:VisualElement name="pause" style="width: 60px; height: 60px; background-color: rgb(0, 255, 0); margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px; border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
+            <engine:VisualElement style="height: 35px; width: 70%; flex-direction: row; align-content: center; justify-content: space-around;">
+                <engine:Button text="Resume" name="button-resume" class="button" />
+                <engine:Button text="Pause" name="button-pause" class="button" />
+            </engine:VisualElement>
         </engine:VisualElement>
-    </engine:VisualElement>
-    <engine:VisualElement class="base text" style="height: 300px;">
-        <engine:Label text="サービスロケーターの&#10;登録リスト" class="title" />
-        <engine:ListView name="locate-list" style="width: 100%; height: 180px; margin-top: 15px; margin-right: 0; margin-bottom: 15px; margin-left: 0;" />
-    </engine:VisualElement>
+        <engine:VisualElement class="base text" style="height: 300px;">
+            <engine:Label text="サービスロケーターの&#10;登録リスト" class="title" />
+            <engine:ListView name="locate-list" style="width: 100%; height: 180px; margin-top: 15px; margin-right: 0; margin-bottom: 15px; margin-left: 0;" />
+        </engine:VisualElement>
+        <engine:VisualElement class="base" style="height: 300px;" />
+    </engine:ScrollView>
 </engine:UXML>
