--- a/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWindow.uxml
+++ b/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/UITK/SymphonyWindow.uxml
@@ -16,6 +16,9 @@
             <engine:Label text="サービスロケーターの&#10;登録リスト" class="title" />
             <engine:ListView name="locate-list" fixed-item-height="50" style="width: 100%; height: 180px; margin-top: 15px; margin-right: 0; margin-bottom: 15px; margin-left: 0; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
         </engine:VisualElement>
-        <engine:VisualElement class="base text" />
+        <engine:VisualElement class="base text">
+            <engine:Label text="Enumコンフィグ" class="title" />
+            <engine:Toggle label="シーンリスト" value="false" name="enum-scene" />
+        </engine:VisualElement>
     </engine:ScrollView>
 </engine:UXML>
