--- a/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWindow.uxml
+++ b/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWindow.uxml
@@ -2,10 +2,7 @@
     <Style src="project://database/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWIndow.uss?fileID=7433441132597879392&amp;guid=16c3f611d15eda644b63e276b16e6925&amp;type=3#SymphonyWIndow" />
     <engine:ScrollView>
         <SymphonyFrameWork.Editor.PauseWindow />
-        <engine:VisualElement class="base text">
-            <engine:Label text="サービスロケーターの&#10;登録リスト" class="title" />
-            <engine:ListView name="locate-list" fixed-item-height="50" style="width: 100%; height: 180px; margin-top: 15px; margin-right: 0; margin-bottom: 15px; margin-left: 0; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
-        </engine:VisualElement>
+        <SymphonyFrameWork.Editor.ServiceLocatorWindow />
         <engine:VisualElement class="base text">
             <engine:Label text="AutoEnumGenerateコンフィグ" class="title" />
             <engine:Toggle label="シーンリスト" value="false" name="enum-scene" />
