--- a/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/UXML/AutoEnumGeneratorWindow.uxml
+++ b/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/UXML/AutoEnumGeneratorWindow.uxml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<engine:UXML
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:engine="UnityEngine.UIElements"
-    xmlns:editor="UnityEditor.UIElements"
-    xsi:noNamespaceSchemaLocation="../../../../../../../../UIElementsSchema/UIElements.xsd"
->
-    
+<engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWIndow.uss?fileID=7433441132597879392&amp;guid=16c3f611d15eda644b63e276b16e6925&amp;type=3#SymphonyWIndow" />
+    <engine:VisualElement name="VisualElement" class="base">
+        <engine:Label text="AutoEnumGenerator" class="title" />
+        <engine:VisualElement class="text" style="flex-grow: 1;">
+            <engine:Toggle label="Toggle" />
+            <engine:Toggle label="Toggle" />
+            <engine:Toggle label="Toggle" />
+        </engine:VisualElement>
+    </engine:VisualElement>
 </engine:UXML>
