--- a/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWindow.uxml
+++ b/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWindow.uxml
@@ -1,13 +1,8 @@
-<engine:UXML xmlns:engine="UnityEngine.UIElements"
-             noNamespaceSchemaLocation="../../../../../../UIElementsSchema/UIElements.xsd"
-             editor-extension-mode="False">
-    <Style src="project://database/Assets/Script/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWIndow.uss?fileID=7433441132597879392&amp;guid=16c3f611d15eda644b63e276b16e6925&amp;type=3#SymphonyWIndow"/>
+<engine:UXML xmlns:engine="UnityEngine.UIElements" noNamespaceSchemaLocation="../../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/Administrator/UITK/SymphonyWIndow.uss?fileID=7433441132597879392&amp;guid=16c3f611d15eda644b63e276b16e6925&amp;type=3#SymphonyWIndow" />
     <engine:ScrollView>
-        <SymphonyFrameWork.Editor.PauseWindow/>
-        <SymphonyFrameWork.Editor.ServiceLocatorWindow/>
-        <engine:VisualElement class="base text">
-            <engine:Label text="AutoEnumGenerate&#10;コンフィグ" class="title"/>
-            <engine:Toggle label="シーンリスト" value="false" name="enum-scene"/>
-        </engine:VisualElement>
+        <SymphonyFrameWork.Editor.PauseWindow />
+        <SymphonyFrameWork.Editor.ServiceLocatorWindow />
+        <SymphonyFrameWork.Editor.AutoEnumGeneratorWindow />
     </engine:ScrollView>
 </engine:UXML>
